testdata/baselines/reference/submodule/compiler/dottedModuleName2.errors.txt
dottedModuleName2.ts(19,18): error TS2339: Property 'B' does not exist on type '{}'.
dottedModuleName2.ts(38,19): error TS2694: Namespace 'A' has no exported member 'B'.
dottedModuleName2.ts(40,19): error TS2694: Namespace 'A' has no exported member 'B'.


==== dottedModuleName2.ts (3 errors) ====
    module A.B {
     
      export var x = 1;
     
    }
     
     
     
    module AA { export module B {
     
      export var x = 1;
     
    } }
     
     
     
    var tmpOK = AA.B.x;
     
    var tmpError = A.B.x;
                     ~
!!! error TS2339: Property 'B' does not exist on type '{}'.
    
    
    module A.B.C
     
    {
     
        export var x = 1;
     
    }
     
     
     
    module M
     
    {
     
        import X1 = A;
     
        import X2 = A.B;
                      ~
!!! error TS2694: Namespace 'A' has no exported member 'B'.
     
        import X3 = A.B.C;
                      ~
!!! error TS2694: Namespace 'A' has no exported member 'B'.
     
    }
    